fixing spacing issue and Profile aesthetics

--- a/client/src/pages/Books/Books.css
+++ b/client/src/pages/Books/Books.css
@@ -2,9 +2,9 @@
   margin-left: 15px;
 }
 
-.g-image {
-  border-radius: 50%;
-}
+ .g-image {
+  border-radius: 5%;
+} 
 
 .books-read {
   text-align: center;
@@ -12,4 +12,8 @@
 
 .bookbox-title{
   margin-left: 7.5px;
+}
+
+.box {
+  margin-bottom: .25rem
 }
